# Tapr

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  meson.build
.cache/clangd/index/: beatmap.cpp.33072459496AAF3E.idx  beatmap.h.CA34725B45BCE626.idx  dm_property_list.h.38467EA67C0C95D9.idx  game.cpp.33E684B90CB48A91.idx  game.cpp.3567216C5DBB0433.idx  game.h.18BF6159E6CEEF4B.idx  game.h.55A48015F5D631C4.idx  game.h.CBB783EB9ADDC9BC.idx  gui.cpp.B893FE75611AB92A.idx  gui.h.C3C24FA4B80E9D2F.idx  helpers.h.00A013A5B021AD66.idx  helpers.h.90DA06F6539B3693.idx  helpers.h.D7A217354A01A6A0.idx  main.cpp.09E72D8D0722DE5C.idx  main.cpp.6A43144CC1E79632.idx  main.cpp.CB13E09EE9F360F5.idx  objects.cpp.8FD9BB32BE11DC1E.idx  objects.cpp.D1843A2F1F1B25C5.idx  objects.cpp.D697A7BA0C9271C5.idx  objects.h.19FEA536D615E1E9.idx  objects.h.96DD966DFD93F4D4.idx  objects.h.C536E486E18D6A1C.idx  raygui.h.4DA280C519EDC4C7.idx
include/: app.h  beatmap.h  config.h  dm_property_list.h  event_system.h  game.h  game_renderer.h  gui.h  helpers.h  objects.h  score.h  systems.h  updater.h
include/utils/: utilities.h  zip_util.h
resources/: ....
src/: beatmap.cpp  game.cpp  gui.cpp  main.cpp  objects.cpp  systems.cpp
src/systems/: .app_system.cpp.swp  app_system.cpp  event_system.cpp  game_renderer_system.cpp  game_system.cpp  updater_system.cpp
src/systems/utils/: utilities.cpp  zip_util.cpp
subprojects/miniz-3.0.2/: .meson-subproject-wrap-hash.txt
